syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anshika";

service StudentService {
  rpc AddStudent(StudentRequest) returns (StudentResponse);
  rpc GetStudents(StudentRequest) returns (StudentsResponse);
}

message StudentRequest {
  int32 id = 1;
  string name = 2;
  string city = 3;
  string college = 4;
}

message StudentResponse {
  int32 id = 1;
  string name = 2;
  string city = 3;
  string college = 4;
}

message StudentsResponse {
  repeated StudentResponse students = 1;
}

message Empty {}
